trunk/Archive2/de/fe53fbd3bf87df/output
main.cpp:6:5: error: reinterpret_cast from 'void *' to 'decltype(func)' (aka 'void ()') is not allowed
    reinterpret_cast<decltype(func)>(s);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
