trunk/Archive2/de/fe53fbd3bf87df/main.cpp
void func() {}

int main()
{
    void* s = reinterpret_cast<void*>(func);
    reinterpret_cast<decltype(func)>(s);
}
